[package]
name = "kyber"
version = "0.6.0"
edition = "2021"
authors = ["Wouter De Coster decosterwouter@gmail.com"]
license = "MIT"
description = "A tool for a minimalistic heatmap plot from bam or cram files"
readme = "README.md"
homepage = "https://github.com/wdecoster/kyber"
repository = "https://github.com/wdecoster/kyber"
keywords = ["ont", "pacbio", "cram", "bam", "alignment"]
categories = ["command-line-utilities", "science"]


[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
image = "0.25.5"
imageproc = "0.25.0"
rust-htslib = "0.48.0"
ndarray = "0.16.1"
ab_glyph = "0.2.29"

[dev-dependencies]
ctor = "0.2.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"]
